[Finished] remove useless <head><body> tags

--- a/_layouts/post_page.html
+++ b/_layouts/post_page.html
@@ -1,7 +1,15 @@
 ---
 layout: default
 ---
-
+<style>
+	table, th, td {
+		border: 1px solid black;
+		border-collapse: collapse;
+	}
+	th, td {
+		padding: 5px;
+	}
+</style>
 <div class="top-strip"></div>
 <main class="content">
     <section class="container">
