--- a/_layouts/post_page.html
+++ b/_layouts/post_page.html
@@ -10,24 +10,6 @@ layout: default
 		padding: 5px;
 	}
 </style>
-<!--TAG MODULE: add some template logic on top of your post layout-->
-{% assign post = page %}
-{% if post.tags.size > 0 %}
-    {% capture tags_content %}Tags&nbsp;<span class="glyphicon glyphicon-tags"></span> {% if post.tags.size == 1 %}<i class="fa fa-tag"></i>{% else %}<i class="fa fa-tags"></i>{% endif %}: {% endcapture %}
-    {% for post_tag in post.tags %}
-        {% for data_tag in site.data.tags %}
-            {% if data_tag.slug == post_tag %}
-                {% assign tag = data_tag %}
-            {% endif %}
-        {% endfor %}
-        {% if tag %}
-            {% capture tags_content_temp %}{{ tags_content }}<a href="/tag/{{ tag.slug }}">{{ tag.name }}</a>{% if forloop.last == false %}, {% endif %}{% endcapture %}
-            {% assign tags_content = tags_content_temp %}
-        {% endif %}
-    {% endfor %}
-{% else %}
-    {% assign tags_content = '' %}
-{% endif %}
 <div class="top-strip"></div>
 <main class="content">
     <section class="container">
@@ -45,10 +27,7 @@ layout: default
 					<hr>
 				</section>
 
-				<section style="font-weight:bold; margin-bottom: 2em;">
-					<!--TAG MODULE: place the generated tag content wherever you like inside your post layout-->
-					<p id="post-meta">{{ tags_content }}</p>
-				</section>
+				{% include tag.html %}
 
 				<section style="font-weight:bold; margin-bottom: 2em;">
 					{% if page.previous %} 
