rm bootstrap.min.css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,15 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8"/>
-		<title>{% if page.title %} {{ page.title }} {% endif %}</title>
+		<title>{% if page.title %} {{ page.title }} {% elsif page.tag %} {% include tag-title.liquid %} {% endif %}</title>
 		<!-- For responsive site
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		-->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<link rel="author" href="/humans.txt">
 		<meta name="description" content="Description Goes Here">
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/css/style.css">
 		<!--[if IE 7]>
 			<html class="ie7"> 
@@ -38,7 +36,9 @@
 	{{ content }}
 
 	<footer>
+
 		<div class="container">
+			{% include social-media.html %}
 			<b>Copyright Notice</b> © {{ site.author }} and {{ site.title }}, 2015-2016.
 			<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br>Every blog post in this site by {{ site.author }} is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
 		</div>
