--- a/_layouts/post_page.html
+++ b/_layouts/post_page.html
@@ -24,6 +24,7 @@ layout: default
 				<h2 class="content">{{page.title}}</h2>
 				<section>
 					{{ content }}
+					{% include reference.html %}
 					<hr>
 				</section>
 
