--- a/_includes/tag.html
+++ b/_includes/tag.html
@@ -1,7 +1,7 @@
 <!--TAG MODULE: add some template logic on top of your post layout-->
 {% assign post = page %}
 {% if post.tags.size > 0 %}
-    {% capture tags_content %}Tags&nbsp;<span class="glyphicon glyphicon-tags"></span> {% if post.tags.size == 1 %}<i class="fa fa-tag"></i>{% else %}<i class="fa fa-tags"></i>{% endif %}: {% endcapture %}
+    {% capture tags_content %}Tags&nbsp;<span class="icon icon-tags"></span> {% if post.tags.size == 1 %}<i class="fa fa-tag"></i>{% else %}<i class="fa fa-tags"></i>{% endif %}: {% endcapture %}
     {% for post_tag in post.tags %}
         {% for data_tag in site.data.tags %}
             {% if data_tag.slug == post_tag %}
