--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,8 @@
 		<link rel="manifest" href="/ico/manifest.json">
 		<link rel="mask-icon" href="/ico/safari-pinned-tab.svg" color="#5bbad5">
 		<meta name="theme-color" content="#ffffff">
+		
+		<link href="/css/syntax.css" rel="stylesheet">
 	</head>
 	<body>
 	<!-- Header
