--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,63 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8"/>
-		<title>{% if page.title %} {{ page.title }} {% elsif page.tag %} {% include tag-title.liquid %} {% endif %}</title>
-		<!-- For responsive site
-			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		-->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<link rel="author" href="/humans.txt">
-		<meta name="description" content="Description Goes Here">
-		<link rel="stylesheet" href="/css/style.css">
-		<!--[if IE 7]>
-			<html class="ie7"> 
-			<link rel="stylesheet" type="text/css" href="/css/font-awesome-ie7.min.css">
-		<![endif]-->
-		<!--[if IE 8]><html class="ie8"> <![endif]-->		
-	    <!--[if lt IE 9]>
-	      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	    <![endif]-->
 
-		<link rel="apple-touch-icon" sizes="120x120" href="/ico/apple-touch-icon.png">
-		<link rel="icon" type="image/png" href="/ico/favicon-32x32.png" sizes="32x32">
-		<link rel="icon" type="image/png" href="/ico/favicon-16x16.png" sizes="16x16">
-		<link rel="manifest" href="/ico/manifest.json">
-		<link rel="mask-icon" href="/ico/safari-pinned-tab.svg" color="#5bbad5">
-		<meta name="theme-color" content="#ffffff">
-		
-		<link href="/css/syntax.css" rel="stylesheet">
-	</head>
+	{% include head.html %}
 	<body>
 	<!-- Header
 	    ================================================== -->
-	<header>
-
-	</header>
+	{% include header.html %}
 
 	{{ content }}
 
-	<footer>
-
-		<div class="container">
-			{% include social-media.html %}
-			<b>Copyright Notice</b> © {{ site.author }} and {{ site.title }}, 2015-2016.
-			<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br>Every blog post in this site by {{ site.author }} is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
-		</div>
-	</footer>
-
 	<!-- Footer
 	    ================================================== -->
+	{% include footer.html %}
 
-	<!-- Javascripts 
+	<!-- Javascript lib
 	    ================================================= -->
-	<script src="/js/jquery.min.js"></script>
-	<script src="/js/custom.js"></script>
+	{% include javascript-lib.html %}
 
     <!-- Analytics
     ================================================== -->
-    <script>
-		// analytics code
-    </script>	
+	{% include analytics.html %}
 	</body>
+
 </html>
